# r2ditto

./: .env.sample  .gitignore  pyproject.toml
r2ditto/: __main__.py
